--- a/style.css
+++ b/style.css
@@ -5,6 +5,6 @@ img{
 body {
     text-align:center;
     font-family: "Arial";
-    background: azure;
+    background: white;
     color: purple;
 }
