--- a/style.css
+++ b/style.css
@@ -8,7 +8,11 @@ html{
 }
 
 body {
-    text-align:center;
     font-family: "Arial";
     color: purple;
+    text-align: center
+}
+
+body1 {
+    text-align: center;
 }
